--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -10,7 +10,7 @@
         <div class="row">
 
         {% assign projectcount = 0 %}
-        {% for project in site.projects | limit:6 %}
+        {% for project in site.projects | sort:"weight" | reverse | limit:6 %}
           <div class="col-md-4 col-sm-6 service-item-container">
             <div class="service-item">
               <span class="fa-stack fa-4x">
