Add feed and progressive tech category to projects
Signed-off-by: Shai Sachs <shaisachs@gmail.com>

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -38,6 +38,9 @@
           <li>
             <a href="https://facebook.com/{{ site.facebook_username }}" title="Facebook"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
           </li>
+          <li>
+            <a href="/feed.xml" title="RSS"><i class="fa fa-rss fa-fw fa-3x"></i></a>
+          </li>
         </ul>
         <hr class="small">
         <p class="text-muted">Copyright &copy; {{ site.copyright }} 20{{ site.time | date: '%y' }}</p>
