Add link to projects
Signed-off-by: Shai Sachs <shaisachs@gmail.com>

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,5 +5,6 @@
     <br>
     <a href="#blog" class="btn btn-dark btn-lg">Blog</a>
     <a href="#bookreviews" class="btn btn-dark btn-lg">Book Reviews</a>
+    <a href="#projects" class="btn btn-dark btn-lg">Projects</a>
   </div>
 </header>
