--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -2,6 +2,7 @@
 <section id="projects" class="projects bg-primary">
   <div class="container">
     <div class="row text-center">
+      <a name="projects"></a>
       <div class="col-lg-10 col-lg-offset-1">
         <h2>Projects</h2>
         <hr class="small">
