--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,7 +27,7 @@
             <a rel="me" href="https://{{site.mastodon_host}}/{{ site.mastodon_username }}" title="Mastodon">
               <span class="icon-stack">
                 <i class="icon-sign-blank icon-stack-base"></i>
-                <i class="icon-light fa fa-fw fa-3x">\f4f6</i>
+                <i class="icon-light fa fa-fw fa-3x">&#f4f6;</i>
             </span>
             </a>
           </li>
