--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,7 +24,7 @@
             <a href="https://github.com/{{ site.github_username }}" title="Github"><i class="fa fa-github fa-fw fa-3x"></i></a>
           </li>
           <li>
-            <a rel="me" href="https://{{site.mastodon_host}}/{{ site.mastodon_username }}" title="Mastodon">
+            <a rel="me" href="https://{{site.mastodon_host}}/@{{ site.mastodon_username }}" title="Mastodon">
               <span class="icon-stack">
                 <i class="icon-sign-blank icon-stack-base"></i>
                 <i class="icon-light fa fa-fw fa-3x">&#f4f6;</i>
