--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -37,8 +37,10 @@
             <a href="https://twitter.com/{{ site.twitter_username }}" title="Twitter"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
           </li>
           <li>
+            <a href="https://app.thestorygraph.com/profile/shaisachs" title="StoryGraph"><i class="fa fa-book fa-fw fa-3x"></i></a>
+          </li>
+          <li>
             <a href="https://www.goodreads.com/user/show/16084341-shai-sachs" title="Goodreads">
-              <!-- from https://github.com/FortAwesome/Font-Awesome/issues/1715 -->
               <span class="icon-stack">
                   <i class="icon-sign-blank icon-stack-base"></i>
                   <i class="icon-light fa fa-fw fa-3x"><span style="font-family:helvetica;">g</span></i>
